objects/User_Structure__c.object
<CustomObject>
    <description>This object serves as a staging object to store all the sales user from HRIS.</description>
    <fields>
        <fullName>AH_RC_Code__c</fullName>
        <label>AH RC Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_RC_Code__c</fullName>
        <label>NH RC Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Code__c</fullName>
        <label>RC Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>User_Structure__c</referenceTo>
        <relationshipLabel>User Structure</relationshipLabel>
        <relationshipName>User_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>User Structure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Username__c</columns>
        <columns>NAME</columns>
        <columns>Job_Code__c</columns>
        <columns>RC_Code__c</columns>
        <columns>Team_Name__c</columns>
        <columns>Segment__c</columns>
        <columns>AH_RC_Code__c</columns>
        <columns>NH_RC_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_AH</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Username__c</columns>
        <columns>NAME</columns>
        <columns>Job_Code__c</columns>
        <columns>RC_Code__c</columns>
        <columns>AH_RC_Code__c</columns>
        <columns>NH_RC_Code__c</columns>
        <columns>Segment__c</columns>
        <columns>Team_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Code__c</field>
            <operation>contains</operation>
            <value>2A</value>
        </filters>
        <label>All AH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_NH</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Username__c</columns>
        <columns>NAME</columns>
        <columns>Job_Code__c</columns>
        <columns>RC_Code__c</columns>
        <columns>AH_RC_Code__c</columns>
        <columns>NH_RC_Code__c</columns>
        <columns>Segment__c</columns>
        <columns>Team_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Code__c</field>
            <operation>contains</operation>
            <value>1A</value>
        </filters>
        <label>All NH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_RM</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Username__c</columns>
        <columns>NAME</columns>
        <columns>Job_Code__c</columns>
        <columns>RC_Code__c</columns>
        <columns>AH_RC_Code__c</columns>
        <columns>NH_RC_Code__c</columns>
        <columns>Segment__c</columns>
        <columns>Team_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Code__c</field>
            <operation>contains</operation>
            <value>4A,4B,3D</value>
        </filters>
        <label>All RM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_TM</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Username__c</columns>
        <columns>NAME</columns>
        <columns>Job_Code__c</columns>
        <columns>RC_Code__c</columns>
        <columns>AH_RC_Code__c</columns>
        <columns>NH_RC_Code__c</columns>
        <columns>Segment__c</columns>
        <columns>Team_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Code__c</field>
            <operation>contains</operation>
            <value>3A</value>
        </filters>
        <label>All TM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Username__c</columns>
        <columns>NAME</columns>
        <columns>Job_Code__c</columns>
        <columns>RC_Code__c</columns>
        <columns>Team_Name__c</columns>
        <columns>Segment__c</columns>
        <columns>AH_RC_Code__c</columns>
        <columns>NH_RC_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>118192,618192</value>
        </filters>
        <label>Search</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Employee ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Structure</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>